attempt to fix overflow issue on mobile

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -20,3 +20,11 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+@media (max-width: 480px) {
+  body {
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+  }
+}
